[gd_scene load_steps=10 format=3 uid="uid://cgb60ltqld0ss"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_gruo6"]
[ext_resource type="PackedScene" uid="uid://cnv1rmmxmj0m4" path="res://scripts/background.tscn" id="2_21j0o"]
[ext_resource type="Texture2D" uid="uid://bk6whxyanspb8" path="res://assets/img/buttons/playButton.png" id="3_pt2cc"]
[ext_resource type="Texture2D" uid="uid://b5lkntqbmqbma" path="res://assets/img/buttons/creditsButton.png" id="4_l7dcj"]
[ext_resource type="Texture2D" uid="uid://7wq6qjf0wd2m" path="res://assets/img/buttons/exitButton.png" id="5_72tt0"]
[ext_resource type="Texture2D" uid="uid://c3pd7osh6hxqd" path="res://assets/img/trophy.png" id="6_cgsv8"]

[sub_resource type="LabelSettings" id="LabelSettings_onpbh"]
font_size = 100
font_color = Color(0.486275, 0.988235, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nbey0"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nvlaq"]
font_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gruo6")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_21j0o")]

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -115.5
offset_right = 233.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
text = "Clicky Cat"
label_settings = SubResource("LabelSettings_onpbh")

[node name="Play" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 32.0
offset_right = 126.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_pt2cc")

[node name="Credits" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -262.0
offset_top = -206.0
offset_right = 762.0
offset_bottom = 306.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("4_l7dcj")

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -201.0
offset_right = 128.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("5_72tt0")

[node name="vrsn" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -105.0
offset_right = 40.0
offset_bottom = -82.0
grow_vertical = 0
label_settings = SubResource("LabelSettings_nbey0")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -132.0
offset_top = 18.0
offset_right = 892.0
offset_bottom = 1042.0
grow_horizontal = 0
scale = Vector2(0.125, 0.125)
texture_normal = ExtResource("6_cgsv8")

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 160.0
offset_bottom = 183.0
grow_horizontal = 0
text = "Leaderboard"
label_settings = SubResource("LabelSettings_nvlaq")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
